fix skeleton z-index conflict with file input

--- a/src/pages/Statistics/style.module.css
+++ b/src/pages/Statistics/style.module.css
@@ -17,6 +17,7 @@
     height: 100%;
     opacity: 0;
     cursor: pointer;
+    z-index: 100;
 }
 
 .heatmap-container {
@@ -44,14 +45,14 @@
     width: 100%;
     height: 100%;
     position: absolute; 
-    z-index: 1000;
+    z-index: 50;
 }
 
 .skeleton-heatmap {
     width: 720px;
     height: 100%;
     position: absolute; 
-    z-index: 1000;
+    z-index: 50;
     border-radius: 25px;
 }
 
